# gehma_server

./: .dockerignore  .gitignore  .tmuxinator.yml  .travis.yml  Cargo.toml  Dockerfile  README.md  build.sh  clear_test.sh  deploy.sh  docker-compose.yml  led_reset.sh  testing.sh
core/: Cargo.toml
core/src/: errors.rs  lib.rs  lvl.rs  schema.rs  utils.rs
core/src/models/: into.rs  mod.rs  schauma.rs
core/src/models/dao/: mod.rs
core/src/models/dto/: mod.rs
gehma_server/: Cargo.toml  Dockerfile  Makefile  build.sh  deploy.sh  run_integration_test.sh  start_database_test_integration.sh
gehma_server/src/: dao_factory.rs  database.rs  main.rs  redis.rs  utils.rs
gehma_server/src/controllers/: auth.rs  blacklist.rs  broadcast.rs  contact_exists.rs  contacts.rs  mod.rs  number_registration.rs  profile_pictures.rs  user.rs
gehma_server/src/middleware/: auth.rs  mod.rs  read_response_body.rs
gehma_server/src/persistence/: blacklist.rs  contact_exists.rs  contacts.rs  mod.rs  user.rs
gehma_server/src/queries/: blacklist.rs  contact_exists.rs  contacts.rs  invitation.rs  mod.rs  profile_picture.rs  session.rs  user.rs
gehma_server/src/queries/impl/: blacklist.rs  contacts.rs  invitation.rs  mod.rs  profile_picture.rs  session.rs  user.rs
gehma_server/src/ratelimits/: mod.rs
gehma_server/src/routes/: auth.rs  blacklist.rs  broadcast.rs  contact_exists.rs  contacts.rs  mod.rs  number_registration.rs  profile_pictures.rs  user.rs
gehma_server/src/services/: mod.rs
gehma_server/src/services/number_registration/: firebase.rs  mod.rs  testing.rs  twilio.rs
gehma_server/src/services/push_notifications/: firebase.rs  mod.rs  one_signal.rs  testing.rs
gehma_server/src/services/session/: mod.rs
gehma_server/src/tests/: api.rs  index.rs  integration.rs  mod.rs
img_profile/: Cargo.toml
img_profile/src/: lib.rs  main.rs
migration_software/iterate_access_tokens/: Cargo.toml  README.md
migration_software/iterate_access_tokens/src/: main.rs
migration_software/sha256_hasher/: Cargo.toml  README.md
migration_software/sha256_hasher/src/: main.rs
migrations/2019-07-10-052951_users/: up.sql
migrations/2019-07-10-073136_led_not_null/: down.sql  up.sql
migrations/2019-07-11-113539_country_code/: down.sql  up.sql
migrations/2019-07-14-073705_text_field/: down.sql  up.sql
migrations/2019-07-16-045709_led_reset/: down.sql  up.sql
migrations/2019-07-16-182241_blacklisting/: down.sql  up.sql
migrations/2019-07-17-164345_blacklist_uuid/: down.sql  up.sql
migrations/2019-07-18-130959_on_led_changed_update/: down.sql  up.sql
migrations/2019-07-25-225533_disable_led/: up.sql
migrations/2019-07-26-101701_description_to_text/: down.sql  up.sql
migrations/2019-07-31-175620_analytics/: down.sql  up.sql
migrations/2019-07-31-183945_usage_statistics/: down.sql  up.sql
migrations/2019-08-02-104324_version/: down.sql  up.sql
migrations/2019-08-07-182245_contacts/: up.sql
migrations/2019-08-08-050323_firebase_token/: down.sql  up.sql
migrations/2019-08-08-064725_unique_contact/: down.sql  up.sql
migrations/2019-08-08-184136_contact_name/: down.sql  up.sql
migrations/2019-08-10-145808_change_contact/: down.sql  up.sql
migrations/2019-10-09-045847_profile_picture/: up.sql
migrations/2019-11-19-201838_remove_is_autofahrer/: down.sql  up.sql
migrations/2019-11-19-202031_remove_is_autofahrer_analytics/: down.sql  up.sql
migrations/2019-11-29-073348_add_access_token/: down.sql  up.sql
migrations/2019-11-29-174458_access_token_type/: down.sql  up.sql
migrations/2019-12-12-122127_change_type_access_token/: down.sql  up.sql
migrations/2019-12-23-123411_events/: down.sql  up.sql
migrations/2019-12-27-184457_init_hashing_tele_num/: down.sql  up.sql
migrations/2019-12-28-132004_blacklist_hashing/: down.sql  up.sql
migrations/2019-12-28-140227_blacklist_hashing_fk/: down.sql  up.sql
migrations/2020-01-04-105615_0.5.3/: down.sql  up.sql
migrations/2020-01-04-113741_contact_view/: down.sql
migrations/2020-01-04-123019_contact_view_blacklist/: down.sql  up.sql
migrations/2020-01-09-181946_contact_view2/: down.sql  up.sql
migrations/2020-02-04-090950_stat_monthly/: down.sql  up.sql
migrations/2020-02-07-140254_contact_view3/: down.sql  up.sql
migrations/2020-02-15-093056_xp_and_lvl/: down.sql  up.sql
migrations/2020-04-26-122901_drop_target_tele_num/: down.sql  up.sql
migrations/2020-05-25-124930_contact_user_fk/: down.sql  up.sql
migrations/2020-06-06-163706_events/: down.sql  up.sql
migrations/2020-06-07-133601_vote/: up.sql
migrations/2020-06-07-135428_trending/: down.sql  up.sql
migrations/2020-06-07-150158_static_profile/: down.sql  up.sql
migrations/2020-06-14-180328_standard_profile/: down.sql  up.sql
migrations/2020-06-14-182557_user_profile_picture/: down.sql  up.sql
migrations/2020-07-06-132534_broadcast/: down.sql  up.sql
migrations/2020-07-06-134221_drop_null_constraint_users_profile_picture/: down.sql  up.sql
migrations/2020-07-06-182529_change_ty_display_user/: down.sql  up.sql
migrations/2020-07-06-183537_update_contact_view/: down.sql  up.sql
migrations/2020-07-09-163023_update_contact_view/: down.sql  up.sql
migrations/2020-07-10-082622_invitations/: down.sql  up.sql
news/: Cargo.toml
news/src/: main.rs  utils.rs
news/templates/: index.html  item.html  user.html
schauma/: Cargo.toml
schauma/src/: lib.rs  main.rs
schauma/src/controllers/: events.rs
schauma/src/datasources/: mod.rs  testing.rs
schauma/src/queries/: events.rs
schauma/src/routes/: events.rs
schauma_spider/: Cargo.toml
schauma_spider/src/: main.rs
src/: blacklist_handler.rs  contacts_handler.rs  errors.rs  exists_handler.rs  invitation_handler.rs  main.rs  models.rs  push_notification_handler.rs  push_notifications.rs  register_handler.rs  schema.rs  user_handler.rs  utils.rs
static/: datenschutz.html  index.html
web_contrib/: Cargo.toml
web_contrib/src/: lib.rs  utils.rs
web_contrib/src/auth/: mod.rs  testing.rs  twilio.rs
web_contrib/src/push_notifications/: firebase.rs  mod.rs  testing.rs
(+31 files in other folders)
