[package]
name = "gehma"
version = "0.5.2"
authors = ["Kevin Per <kevin.per@protonmail.com>"]
edition = "2018"

[workspace]
members = [
    "core",
    "web_contrib",
    "gehma_server",
    "schauma",
    "schauma_spider",
    "migration_software/sha256_hasher"
]

[dependencies]

[[bin]]
name = "sprechstunde"
path = "gehma_server/src/main.rs"

[[bin]]
name = "schauma"
path = "schauma/src/main.rs"

[[bin]]
name = "schauma_spider"
path = "schauma_spider/src/main.rs"

[[bin]]
name = "256_hasher"
path = "migration_software/sha256_hasher/src/main.rs"


[dev-dependencies]
tempfile = "3"
reqwest = "0.9"
