[package]
name = "core"
version = "0.2.0"
authors = ["Kevin Per <kevin.per@protonmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.*", features = ["postgres","uuidv07", "r2d2", "chrono"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
derive_more = "0.15.0"
actix = "0.8"
actix-web = "2"
ring = "0.14.6"
data-encoding = "2.1.2"
phonenumber = "0.2.4"

[lib]
name = "core"
path = "src/lib.rs"
