[package]
name = "core"
version = "0.0.1"
authors = ["Kevin Per <kevin.per@protonmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.3", features = ["postgres","uuid", "r2d2", "chrono"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
derive_more = "0.15.0"
actix = "0.8"
actix-web = "2"
ring = "0.14.6"
data-encoding = "2.1.2"
phonenumber = "0.2.4"
log = "0.4"
rand = "0.7.3"

[lib]
name = "core"
path = "src/lib.rs"
