[package]
name = "sprechstunde"
version = "0.5.3"
authors = ["Kevin Per <kevin.per@protonmail.com>"]
edition = "2018"

[dependencies]
core = { path = "../core" }
web_contrib = { path = "../web_contrib" }
actix-identity = "0.1.0"
actix-multipart = "0.1.1"
actix-cors = "0.2.0"
actix-service = "0.4.1"
bytes = "0.4"
actix-files = "0.2"
actix-web-actors = "1.0.0"
actix-web = "2" 
actix = "0.8"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.*", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.14.1"
env_logger = "0.6"
log = "0.4"
futures = "0.3"
r2d2 = "0.8.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
phonenumber = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = "0.9"
tokio = "0.1.22"
diesel_migrations= "1.4.0"
ring = "0.14.6"
data-encoding = "2.1.2"
img_profile = { path = "../img_profile" }

[dev-dependencies]
tempfile = "3"
