[package]
name = "sprechstunde"
version = "0.6.1"
authors = ["Kevin Per <kevin.per@protonmail.com>"]
edition = "2018"

[dependencies]
#img_profile = { path = "../img_profile" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
core = { path = "./../core" }
web_contrib = { path = "./../web_contrib" }
chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "1.3", features = ["uuid", "postgres", "r2d2", "chrono"] }
#actix-multipart = "0.1.1"
actix-cors = "0.2.0"
actix-service = "1.0.5"
actix-files = "0.2"
#actix-web-actors = "1.0.0"
actix-web = "2.0.0" 
actix-http = "1" 
#actix = "0.9"
actix-rt = "1.0" 
dotenv = "0.14.1"
env_logger = "0.6"
log = "0.4"
ring = "0.14.6"
data-encoding = "2.1.2"
futures = "0.3.4"
r2d2 = "0.8.7"
r2d2_redis = "0.13.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = "0.9"
tokio = "0.1.22"
diesel_migrations= "1.4.0"
mockall = "0.7"
jsonwebtoken = "6"
time = "0.1.43"

[features]
integration_tests = []

[dev-dependencies]
tempfile = "3"
lazy_static = "1.4"
