[package]
name = "news"
version = "0.1.0"
authors = ["Kevin Per <kevin.per@protonmail.com>"]
edition = "2018"

[dependencies]
core = { path = "../core" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "1.3", features = ["uuid", "postgres", "r2d2", "chrono"] }
actix-web = "2.0.0" 
actix-rt = "1.0" 
dotenv = "0.14.1"
env_logger = "0.6"
log = "0.4"
r2d2 = "0.8.7"
askama = "0.8.0"

