[package]
name = "web_contrib"
version = "0.1.0"
authors = ["Kevin Per <kevin.per@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4.6", features = ["serde"] }
reqwest = "0.9"
log = "0.4"
tokio = "0.1.22"
futures = "0.1"
actix-web = "1.0.3"
